Finally implemented graphs without too much pain. Still need to add interactivity and fix the layout.

--- a/liveable/src/styles/tool-styles.css
+++ b/liveable/src/styles/tool-styles.css
@@ -105,3 +105,8 @@ input:invalid {
   box-shadow: inset 0 0 1px 1px red!important;
   background-color: #ffd2d2;
 }
+
+.graph {
+  width: 300px;
+  height: 300px;
+}
